syntax = "proto3";

/*import "github.com/golang/protobuf/ptypes/empty/empty.proto";*/
/*import "github.com/golang/protobuf/ptypes/wrappers/wrappers.proto";*/

package tofu;

message File {
  string path = 1;
}

message Block {
  string hash = 1;
}

message Blocks {
  repeated Block block = 1;
}

message BlockData {
  Block block = 1;
  bytes data = 2;
}

message BytesValue {
  bytes data = 1;
}

service BlockStore {
  rpc GetBlock (Block) returns (stream BytesValue) {}
  rpc PutBlock (stream BytesValue) returns (Block) {}
  rpc ListBlocks (ListBlocksRequest) returns (stream Block) {}
}

message GetBlockRequest {
  Block block = 1;
  /*uint64 length = 2;*/
}

message PutBlockRequest {
  Block block = 1;
  bytes data = 2;
}

message ListBlocksRequest {
}
